# repocert

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
.repocert/: config.toml
docs/: spec.md
src/: cli.rs  lib.rs
src/certification/: error.rs  fingerprint.rs  hex.rs  mod.rs  signing.rs  state.rs  store.rs  types.rs
src/certification/store/: layout.rs  mod.rs  records.rs  (+2 more)
src/certify/: error.rs  mod.rs  service.rs  types.rs
src/check/: error.rs  execute.rs  mod.rs  plan.rs  service.rs  types.rs
src/cli/: app.rs  authorize.rs  certify.rs  check.rs  fix.rs  hook.rs  install_hooks.rs  json.rs  mod.rs  session.rs  status.rs  validate.rs
src/config/: discovery.rs  error.rs  loader.rs  mod.rs  model.rs  raw.rs  validate.rs
src/contract/: evaluation.rs  mod.rs  pattern.rs  selection.rs
src/enforcement/: error.rs  matcher.rs  mod.rs  service.rs  types.rs
src/exec/: mod.rs  runner.rs
src/fix/: error.rs  execute.rs  mod.rs  plan.rs  service.rs  types.rs
src/git/: checkout.rs  commit.rs  common_dir.rs  head.rs  hooks_path.rs  mod.rs  status.rs  worktree.rs
src/hooks/: error.rs  generated.rs  mod.rs  service.rs  types.rs
src/local_policy/: error.rs  mod.rs  service.rs  types.rs
src/status/: error.rs  mod.rs  service.rs  types.rs
tests/: certification.rs  cli.rs  config.rs  config_loading.rs
tests/certification/: fingerprint.rs  store.rs
tests/cli/: authorize.rs  certify.rs  check.rs  fix.rs  install_hooks.rs  local_policy.rs  status.rs  validate.rs
tests/config/: error.rs  loading.rs  validate.rs
(+8 files in other folders)
