[package]
name = "repocert"
version = "0.1.0"
edition = "2024"
description = "Certification and enforcement for git repositories"
license = "MIT"
repository = "https://github.com/danielstarman/repocert"

[dependencies]
clap = { version = "4", features = ["derive"] }
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
toml = "1"
wait-timeout = "0.2"
